# Cognitive_Coders

./: README.md
NumCompute/: pyproject.toml
NumCompute/demo/: quickstart.ipynb
NumCompute/numcompute/: __init__.py  benchmarking.py  io.py  metrics.py  optim.py  pipeline.py  preprocessing.py  rank.py  sort_search.py  stats.py  utils.py
NumCompute/tests/: test_benchmarking.py  test_optim.py  test_pipeline.py
